--- a/docs/3/modules/password_hash.yml
+++ b/docs/3/modules/password_hash.yml
@@ -3,6 +3,23 @@ name: password_hash
 description: |-
   This module allows passwords to be hashed and adds the `/MKPASSWD` command which allows the generation of hashed passwords for use in the server configuration.
 
+configuration:
+- name: mkpasswd
+  description: |-
+    The `<mkpasswd>` tag defines settings about how the mkpasswd module should behave. This tag can only be defined once.
+  attributes:
+  - name: operonly
+    type: Boolean
+    required: false
+    default: 'No'
+    description: |-
+      Whether the `/MKPASSWD` command is only usable by server operators. You should enable this once you have generated your passwords.
+  details: ""
+  example: |-
+    ```xml
+    <mkpasswd operonly="no">
+    ```
+
 commands:
 - name: MKPASSWD
   param_count: 2
