--- a/docs/3/configuration/_security.yml
+++ b/docs/3/configuration/_security.yml
@@ -83,7 +83,7 @@ attributes:
 - name: userstats
   type: Text
   required: false
-  default: None
+  default: Pu *(since 3.11)*<br>*None (3.0 to 3.10)*
   description: |-
     The `/STATS` characters that a non-server operator can view.
 details: |+
