--- a/docs/3/modules/ldapoper.yml
+++ b/docs/3/modules/ldapoper.yml
@@ -25,7 +25,7 @@ configuration:
     required: true
     default: None
     description: |-
-      The id of the `<database>` tag that contains the required LDAP configuration.
+      The id of the `<database>` tag that contains the required LDAP configuration. See the docs for [the ldap module](/3/modules/ldap) for more information.
   details: ""
   example: |-
     ```xml
