--- a/docs/3/modules/clones.yml
+++ b/docs/3/modules/clones.yml
@@ -10,7 +10,7 @@ description: |-
 commands:
 - name: CLONES
   param_count: 1
-  syntax: '`<limit>`'
+  syntax: <limit>
   description: |-
     Lists all IP addresses from which there are more than &lt;limit&gt; connections.
   example: |-
