--- a/docs/3/modules/modenotice.yml
+++ b/docs/3/modules/modenotice.yml
@@ -10,7 +10,7 @@ description: |-
 commands:
 - name: MODENOTICE
   param_count: 2
-  syntax: '`<modes> <message>`'
+  syntax: <modes> <message>
   description: |-
     Sends &lt;message&gt; to all users with the &lt;modes&gt; user modes set.
   example: |-
