--- a/docs/3/modules/operchans.yml
+++ b/docs/3/modules/operchans.yml
@@ -20,7 +20,7 @@ extbans:
   - name: oper
     char: O
     type: Matching
-    syntax: '`O:<pattern>`'
+    syntax: O:<pattern>
     description: Checks whether users are logged into a server operator account matching &lt;pattern&gt;.
   example: |-
     Bans users logged into server operator accounts matching `Evil*` from joining the channel:
