--- a/docs/3/modules/password_hash.yml
+++ b/docs/3/modules/password_hash.yml
@@ -23,7 +23,7 @@ configuration:
 commands:
 - name: MKPASSWD
   param_count: 2
-  syntax: '`<hash> <password>`'
+  syntax: <hash> <password>
   description: |-
     Hashes &lt;password&gt; using the &lt;hash&gt; algorithm.
   example: |-
