--- a/docs/3/modules/vhost.yml
+++ b/docs/3/modules/vhost.yml
@@ -51,7 +51,7 @@ configuration:
 commands:
 - name: VHOST
   param_count: 2
-  syntax: '`<username> <password>`'
+  syntax: <username> <password>
   description: |-
     Log into the account with the specified username and password.
   example: |-
