--- a/docs/3/modules/gecosban.yml
+++ b/docs/3/modules/gecosban.yml
@@ -9,12 +9,12 @@ extbans:
   - name: realmask
     char: a
     type: Matching
-    syntax: '`a:<pattern>`'
+    syntax: a:<pattern>
     description: Checks whether users have a nick!user@host+real mask matching &lt;pattern&gt;.
   - name: realname
     char: r
     type: Matching
-    syntax: '`r:<pattern>`'
+    syntax: r:<pattern>
     description: Checks whether users have a a real name (gecos) matching &lt;pattern&gt;.
   example: |-
     Bans users with a nick!user@host+real mask matching `*!*@example.com+*example*` from joining the channel:
