--- a/docs/3/modules/namedmodes.yml
+++ b/docs/3/modules/namedmodes.yml
@@ -8,7 +8,7 @@ chmodes:
   - name: namebase
     char: Z
     type: List
-    syntax: '`<name>[=<value>]`'
+    syntax: <name>[=<value>]
     usable_by: Depends on the mode in &lt;name&gt;
     description: |-
       Allows users to add, remove, and view the modes of a specific target.
@@ -46,7 +46,7 @@ chmodes:
 commands:
 - name: PROP
   param_count: 1+
-  syntax: '`<target> [(+|-)<name> [<value>]]+`'
+  syntax: <target> [(+|-)<name> [<value>]]+
   description: |-
     Allows users to add, remove, and view the modes of a specific target.
   example: |-
