--- a/docs/3/modules/rline.yml
+++ b/docs/3/modules/rline.yml
@@ -41,7 +41,7 @@ configuration:
 commands:
 - name: RLINE
   param_count: 1, 3
-  syntax: '`<regex> [<duration> <reason>]`'
+  syntax: <regex> [<duration> <reason>]
   description: |-
     Allows server operators to add and remove regular expression bans on nickname!username@hostname+realname masks.
   example: |-
