--- a/docs/3/modules/rmode.yml
+++ b/docs/3/modules/rmode.yml
@@ -6,7 +6,7 @@ description: |-
 commands:
 - name: RMODE
   param_count: 2-3
-  syntax: '`<channel> <mode> [<pattern>]`'
+  syntax: <channel> <mode> [<pattern>]
   description: |-
     Removes all &lt;mode&gt; list modes matching &lt;pattern&gt;, or all if no pattern is specified.
   example: |-
