--- a/docs/3/modules/samode.yml
+++ b/docs/3/modules/samode.yml
@@ -26,7 +26,7 @@ configuration:
 commands:
 - name: SAMODE
   param_count: 2+
-  syntax: '`<target> <modes> [<mode-parameters>]+`'
+  syntax: <target> <modes> [<mode-parameters>]+
   description: |-
     Changes the modes of &lt;target&gt; to &lt;modes&gt; [&lt;mode-parameters&gt;]+
   example: |-
