--- a/docs/3/modules/sanick.yml
+++ b/docs/3/modules/sanick.yml
@@ -6,7 +6,7 @@ description: |-
 commands:
 - name: SANICK
   param_count: 2
-  syntax: '`<old-nick> <new-nick>`'
+  syntax: <old-nick> <new-nick>
   description: |-
     Changes the nickname of &lt;old-nick&gt; to &lt;new-nick&gt;.
   example: |-
