--- a/docs/3/modules/satopic.yml
+++ b/docs/3/modules/satopic.yml
@@ -6,7 +6,7 @@ description: |-
 commands:
 - name: SATOPIC
   param_count: 2
-  syntax: '`<channel> <topic>`'
+  syntax: <channel> <topic>
   description: |-
     Changes the topic of &lt;channel&gt; to &lt;topic&gt;.
   example: |-
