--- a/docs/3/modules/svshold.yml
+++ b/docs/3/modules/svshold.yml
@@ -6,7 +6,7 @@ description: |-
 commands:
 - name: SVSHOLD
   param_count: 1-3
-  syntax: '`<nickname> [<duration> [<reason>]]`'
+  syntax: <nickname> [<duration> [<reason>]]
   description: |-
     Allows services to add and remove nickname reservations.
   # SVSHOLD is not documented here because it is not intended to be executed by users
